<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/back_pasi"
    android:layoutDirection="ltr"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_itemprodoct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/sdds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_name_itemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:padding="5dp"
        android:textColor="@color/ebb2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/img_itemprodoct"
        app:layout_constraintTop_toTopOf="@+id/img_itemprodoct"
        tools:text="کیف پاسی اصل" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_price_itemprr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:textColor="@color/ebb2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="2T" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/back"
        android:padding="7dp"
        android:textColor="@color/ebb2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_itemprodoct" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sdsd"
        android:textColor="@color/ebb2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_name_itemp"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/txt_name_itemp"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_itemp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/mozayde"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_backspace_24" />


    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:isIndicator="true"
        android:rating="3"
        android:rotation="0"
        android:rotationX="0"
        android:theme="@style/CustomRating"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.892">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:text="@string/sentextiii"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="52dp"
            android:background="@drawable/back_item_list"
            android:hint="@string/namesender"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/ebb1"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="46dp"
            android:background="@drawable/back_item_list"
            android:gravity="start"
            android:hint="@string/entertext"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/ebb1"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/send_tex"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="25dp"
            app:icon="@drawable/message_24"
            app:iconSize="20dp"
            app:iconTint="@color/white" />

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27dp" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ebb4"
        android:text="@string/j"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/buy_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
